Website: Pages Design >> home , About , Pricing , Contact Us

--- a/src/web/website/templates/website/base.html
+++ b/src/web/website/templates/website/base.html
@@ -34,8 +34,9 @@
 {% block content %}
 {% endblock content %}
 
+{% block content-without-footer %}
 {% include 'website/include/footer.html' %}
-
+{% endblock content-without-footer %}
 
 <!-- Back-to-Top start -->
 <div id="back-to-top">
