--- a/src/web/website/templates/website/include/footer.html
+++ b/src/web/website/templates/website/include/footer.html
@@ -23,16 +23,15 @@
                     </div>
                     <div class="col-xl-3 col-md-6">
                         <div class="widget">
-                            <h4 class="footer-title">Explore</h4>
+                            <h4 class="footer-title">Quick Links</h4>
                             <div class="menu-explore-container">
                                 <ul class="menu">
                                     <li class="menu-item">
                                         <a href="#" aria-current="page">Home</a>
                                     </li>
-                                    <li class="menu-item"><a href="#">Actors</a></li>
-                                    <li class="menu-item"><a href="#">Basketball</a></li>
-                                    <li class="menu-item"><a href="#">Celebrity</a></li>
-                                    <li class="menu-item"><a href="#">Cross</a></li>
+                                    <li class="menu-item"><a href="#">Abouts Us</a></li>
+                                    <li class="menu-item"><a href="#">Pricing Plain</a></li>
+                                    <li class="menu-item"><a href="#">Blogs</a></li>
                                 </ul>
                             </div>
                         </div>
