--- a/src/web/website/templates/website/index.html
+++ b/src/web/website/templates/website/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-{% block content %}
+{% block content-without-footer %}
     <!-- owl-carousel Banner Start -->
     <section class="pt-0 pb-0">
         <div class="container-fluid px-0">
@@ -13,14 +13,14 @@
                              data-desk_num="1"
                              data-lap_num="1" data-tab_num="1" data-mob_num="1" data-mob_sm="1" data-autoplay="true"
                              data-loop="true" data-margin="0">
-                            <div class="item" style="background: url('{% static 'website/images/background/asset-3.jpg' %}')">
+                            <div class="item" style="background: url('{% static 'website/images/background/asset-54.jpg' %}')">
 
                             <div class="gen-movie-contain-style-2 h-100">
                                 <div class="container h-100">
                                     <div class="row flex-row-reverse align-items-center h-100">
                                         <div class="col-xl-6">
                                             <div class="gen-front-image ">
-                                                <img src="{% static 'website/images/background/asset-3.jpg' %}"
+                                                <img src="{% static 'website/images/background/asset-4.jpg' %}"
                                                      alt="owl-carousel-banner-image">
                                                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
                                                    class="playBut popup-youtube popup-vimeo popup-gmaps">
@@ -49,7 +49,7 @@
                                         <div class="col-xl-6">
                                             <div class="gen-tag-line"><span>Best Of 2021</span></div>
                                             <div class="gen-movie-info">
-                                                <h3>The Express</h3>
+                                                <h3>The DramaBox</h3>
                                             </div>
                                             <div class="gen-movie-meta-holder">
                                                 <ul class="gen-meta-after-title">
@@ -131,4 +131,4 @@
     </section>
     <!-- owl-carousel Banner End -->
 
-{% endblock content %}
+{% endblock content-without-footer %}
