--- a/src/web/website/templates/website/include/header.html
+++ b/src/web/website/templates/website/include/header.html
@@ -7,40 +7,35 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="#">
-                            <img class="img-fluid logo" src="{% static 'website/images/logo-1.png' %}" alt="streamlab-image">
+                            <img class="img-fluid logo" src="{% static 'website/images/logo-1.png' %}"
+                                 alt="streamlab-image">
                         </a>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse float-left" id="navbarSupportedContent">
                             <div id="gen-menu-contain" class="gen-menu-contain">
                                 <ul id="gen-main-menu" class="navbar-nav ml-auto">
-                                    <li class="menu-item active">
-                                        <a href="#" aria-current="page">Home</a>
+                                    <li class="menu-item ">
+                                        <a href="{% url 'website:home' %}" aria-current="page">Home</a>
+                                    </li>
+
+                                    <li class="menu-item">
+                                        <a href="{% url 'website:about' %}">About</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="#">Movies</a>
+                                        <a href="{% url 'website:pricing' %}">Pricing</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="#">Tv Shows</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="#">Video</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="#">Pages</a>
+                                        <a href="{% url 'website:contact' %}">Contact</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="gen-header-info-box">
-
-
-                            <div class="gen-btn-container">
-                                <a href="#" class="gen-button">
-                                    <div class="gen-button-block">
-                                        <span class="gen-button-line-left"></span>
-                                        <span class="gen-button-text">Subscribe</span>
-                                    </div>
-                                </a>
-                            </div>
+                                    <a href="#">
+                                        <img src="/static/website/images/asset-35.png" class="gen-playstore-logo" alt="playstore">
+                                    </a>
+                                    <a href="#">
+                                        <img src="/static/website/images/asset-36.png" class="gen-appstore-logo" alt="appstore">
+                                    </a>
                         </div>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
