--- a/src/web/website/templates/website/include/footer.html
+++ b/src/web/website/templates/website/include/footer.html
@@ -9,14 +9,11 @@
                         <div class="widget">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <img src="{% static 'website/images/logo-1.png' %}" class="gen-footer-logo" alt="gen-footer-logo">
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                                    <ul class="social-link">
-                                        <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#" class="facebook"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#" class="facebook"><i class="fab fa-skype"></i></a></li>
-                                        <li><a href="#" class="facebook"><i class="fab fa-twitter"></i></a></li>
-                                    </ul>
+                                    <img src="{% static 'website/images/logo-1.png' %}" class="gen-footer-logo"
+                                         alt="gen-footer-logo">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+
                                 </div>
                             </div>
                         </div>
@@ -31,7 +28,6 @@
                                     </li>
                                     <li class="menu-item"><a href="#">Abouts Us</a></li>
                                     <li class="menu-item"><a href="#">Pricing Plain</a></li>
-                                    <li class="menu-item"><a href="#">Blogs</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -41,8 +37,6 @@
                             <h4 class="footer-title">Company</h4>
                             <div class="menu-about-container">
                                 <ul class="menu">
-                                    <li class="menu-item"><a href="contact-us.html">Company</a>
-                                    </li>
                                     <li class="menu-item"><a href="contact-us.html">Privacy
                                         Policy</a></li>
                                     <li class="menu-item"><a href="contact-us.html">Terms Of
@@ -56,16 +50,16 @@
                     </div>
                     <div class="col-xl-3  col-md-6">
                         <div class="widget">
-                            <h4 class="footer-title">Downlaod App</h4>
+                            <h4 class="footer-title">Our Social Account</h4>
                             <div class="row">
                                 <div class="col-sm-12">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                                    <a href="#">
-                                        <img src="{% static 'website/images/asset-35.png' %}" class="gen-playstore-logo" alt="playstore">
-                                    </a>
-                                    <a href="#">
-                                        <img src="{% static 'website/images/asset-36.png' %}" class="gen-appstore-logo" alt="appstore">
-                                    </a>
+                                     <ul class="social-link">
+                                        <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="#" class="facebook"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="#" class="facebook"><i class="fab fa-skype"></i></a></li>
+                                        <li><a href="#" class="facebook"><i class="fab fa-twitter"></i></a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
