API: APis Created For Home , DramaList Drama Detail

--- a/src/web/website/templates/website/include/footer.html
+++ b/src/web/website/templates/website/include/footer.html
@@ -36,10 +36,9 @@
                 </div>
             </div>
             <ul class="footer-list-2">
-                <li><a href="#">Terms and Condition</a></li>
-                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="{% url 'website:privacy-policy' %}">Terms and Condition</a></li>
+                <li><a href="{% url 'website:terms-and-condition' %}">Privacy Policy</a></li>
                 <li><a href="{% url 'accounts:deactivate-account' %}">Account Activate/Deactivate</a></li>
-
             </ul>
         </div>
     </div>
