Design Update and Some Admin Pages Added and Rootadmin unused models removed

--- a/src/web/website/templates/website/base.html
+++ b/src/web/website/templates/website/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Namespace-IT">
     <meta name="description" content="WowTube - OTT Platform and Video Streaming HTML Template">
     <!-- ======== Page title ============ -->
-    <title>WowTube - OTT Platform and Video Streaming HTML Template</title>
+    <title>DRAMABOX - Platform For Turkish Season</title>
     <link rel="shortcut icon" href="{% static 'website/img/favicon.svg' %}">
     <link rel="stylesheet" href="{% static 'website/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'website/css/all.min.css' %}">
