--- a/src/web/admins/templates/admins/include/admin_header.html
+++ b/src/web/admins/templates/admins/include/admin_header.html
@@ -23,6 +23,28 @@
                             <a href="{% url 'admins:user-list' %}" class="dropdown-item">Users</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-pages" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="bx bx-user mr-2"></i>Drama Series
+                        </a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-pages" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="bx bx-se mr-2"></i>Content Control
+                            <div class="arrow-down"></div>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="topnav-pages">
+                            <a href="#" class="dropdown-item">Tags</a>
+                            <a href="#" class="dropdown-item">Actors</a>
+                            <a href="#" class="dropdown-item">Languages</a>
+                            <a href="#" class="dropdown-item">Categories</a>
+                            <a href="#" class="dropdown-item">Directories</a>
+                            <a href="#" class="dropdown-item">Content Rating</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </nav>
