--- a/src/web/admins/templates/admins/include/admin_nav.html
+++ b/src/web/admins/templates/admins/include/admin_nav.html
@@ -104,7 +104,7 @@
                     <a class="dropdown-item" href="{% url 'accounts:cross-auth' %}">
                         <i class="bx bxs-dashboard font-size-16 align-middle mr-1"></i> Dashboard
                     </a>
-                    <a class="dropdown-item" href="{% url 'accounts:user-change' %}">
+                    <a class="dropdown-item" href="{% url 'admins:user-update' request.user.id %}">
                         <i class="bx bx-user font-size-16 align-middle mr-1"></i> Profile
                     </a>
                     <div class="dropdown-divider"></div>
@@ -119,7 +119,7 @@
                         <i class="bx-fw bx bxl-facebook-square font-size-16 align-middle mr-1"></i>Social Accounts
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-primary" href="{% url 'accounts:logout' %}">
+{#                    <a class="dropdown-item text-primary" href="{% url 'accounts:logout' %}">#}
                         <i class="bx bx-power-off font-size-16 align-middle mr-1"></i> Logout
                     </a>
                 </div>
