--- a/src/web/website/templates/website/include/footer.html
+++ b/src/web/website/templates/website/include/footer.html
@@ -36,8 +36,8 @@
                 </div>
             </div>
             <ul class="footer-list-2">
-                <li><a href="{% url 'website:privacy-policy' %}">Terms and Condition</a></li>
-                <li><a href="{% url 'website:terms-and-condition' %}">Privacy Policy</a></li>
+                <li><a href="{% url 'website:terms-and-condition' %}">Terms and Condition</a></li>
+                <li><a href="{% url 'website:privacy-policy' %}">Privacy Policy</a></li>
                 <li><a href="{% url 'accounts:deactivate-account' %}">Account Activate/Deactivate</a></li>
             </ul>
         </div>
