--- a/src/web/website/templates/website/include/header.html
+++ b/src/web/website/templates/website/include/header.html
@@ -8,7 +8,7 @@
                 <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                     <div class="offcanvas__logo">
                         <a href="{% url 'website:home' %}">
-                            <img src="{% static 'website/img/logo/white-logo.svg' %}" alt="logo-img">
+                            <img src="{% static 'website/img/logo/white-logo.png' %}" alt="logo-img">
                         </a>
                     </div>
                     <div class="offcanvas__close">
@@ -87,7 +87,7 @@
                 <div class="header-left">
                     <div class="logo">
                         <a href="{% url 'website:home' %}" class="header-logo">
-                            <img src="{% static 'website/img/logo/white-logo.svg' %}" alt="logo-img">
+                            <img src="{% static 'website/img/logo/white-logo.png' %}" alt="logo-img">
                         </a>
                     </div>
                 </div>
