--- a/src/web/website/templates/website/terms_and_condition.html
+++ b/src/web/website/templates/website/terms_and_condition.html
@@ -4,7 +4,7 @@
     <div class="container mt-5">
         <div class="row mt-5 mb-5">
             <div class="col-12 mt-5">
-                <h1>Terms and Conditions</h1>
+                <h1 class="mt-5 text-center mb-3">Terms and Conditions</h1>
                 <p>DramaBox, LLC, a Maine limited liability company (“we”, “us”, or “our”) owns and operates
                     the software application (the “Software”) which provides users with hand recognition technology to
                     identify a suitable gun size for each individual user (the “Services”). The Software and the
@@ -17,13 +17,16 @@
                     changes will constitute your acceptance of the changes. Agreement to these Terms also constitutes
                     your agreement to the DramaBox Biometric Privacy Policy (the “Privacy Policy”), which is
                     incorporated herein.</p>
+                <br>
 
                 <h3>Use of Software</h3>
+                <br>
 
                 <h4>Biometric Information Collection</h4>
                 <p>The words of which the initial letter is capitalized have meanings defined under the following
                     conditions. The following definitions shall have the same meaning regardless of whether they appear
                     in singular or in plural.</p>
+                <br>
 
                 <h4>Definitions</h4>
                 <p>“Biometric Data” is considered any biometric identifiers and biometric information, including a
@@ -43,6 +46,7 @@
                 <p>We shall retain user’s Biometric Data until the Services are complete or for 1 year following the
                     user’s last interaction with DramaBox. We will use a reasonable standard of care to store,
                     transmit, and protect from disclosure any paper or electronic biometric data collected.</p>
+                <br>
 
                 <h4>Registration</h4>
                 <p>In order to use our Services, you will have to provide certain personal and financial information as
@@ -51,6 +55,7 @@
                     suspected unauthorized use of your information or any other breach of security. We cannot and will
                     not be liable for any loss or damage arising from your failure to comply with the above
                     requirements.</p>
+                <br>
 
                 <h4>Access to the Services</h4>
                 <p>Subject to these Terms, we grant you a limited, non-exclusive, nontransferable personal license to
@@ -58,6 +63,7 @@
                     to revise the Services available on the Software and to change, suspend, or discontinue any aspect
                     of the Software. We may also impose rules for and limits on use of the Software or restrict your
                     access to part, or all, of the Software without notice or penalty.</p>
+                <br>
 
                 <h4>Termination of Service</h4>
                 <p>We may terminate the Services at any time and such termination shall be effective immediately. You
@@ -67,12 +73,15 @@
                     the then-current term (unless the termination was due to a material breach by DramaBox),
                     any outstanding and future payments due to us shall become immediately due and payable. If you opted
                     for an annual payment of any fees, no refund will be issued in the event of early termination.</p>
+                <br>
 
                 <h3>Disclaimers, Limitations, and Exclusions of Liability</h3>
+                <br>
 
                 <h4>Disclaimer</h4>
                 <p>The information contained in the Software is provided for informational purposes only. We cannot
                     guarantee the accuracy of the recommendations provided by the Software.</p>
+                <br>
 
                 <h4>Limited Warranties</h4>
                 <p>THE SOFTWARE, ALL INFORMATION, CONTENT, MATERIALS, AND SERVICES RELATED TO THE FOREGOING, AND THE
@@ -84,6 +93,7 @@
                     OR SERVICES WILL BE UNINTERRUPTED, ERROR-FREE, OR VIRUS FREE. WE DO NOT GUARANTEE THE SECURITY OF
                     ANY INFORMATION TRANSMITTED TO OR FROM THE SOFTWARE OR SERVICES, AND YOU AGREE TO ASSUME THE
                     SECURITY RISK FOR ANY INFORMATION YOU PROVIDE USING THE SOFTWARE OR SERVICES.</p>
+                <br>
 
                 <h4>Limitation of Liability</h4>
                 <p>USE OF OUR SOFTWARE AND/OR THE SERVICES RECEIVED BY YOU ARE AT YOUR OWN RISK. IN NO EVENT WILL WE OR
@@ -96,6 +106,7 @@
                     LIMITATION OF LIABILITY IS AN ESSENTIAL TERM BETWEEN YOU AND US RELATING TO THE PROVISION OF THE
                     SOFTWARE AND THE SERVICES TO YOU, AND WE WOULD NOT PROVIDE THE SOFTWARE OR SERVICES TO YOU WITHOUT
                     THIS LIMITATION.</p>
+                <br>
 
                 <h4>Indemnification</h4>
                 <p>YOU AGREE TO INDEMNIFY, HOLD HARMLESS, AND DEFEND FIRSTLINE DEFENSE, ITS SUBSIDIARIES, DIVISIONS, AND
@@ -103,12 +114,15 @@
                     ALL CLAIMS, LIABILITIES, DAMAGES, COSTS, AND EXPENSES OF DEFENSE, INCLUDING ATTORNEYS’ FEES, IN ANY
                     WAY ARISING FROM OR RELATED TO YOUR ILLEGAL USE OF THE SOFTWARE, YOUR VIOLATION OF THESE TERMS OR
                     THE PRIVACY POLICY, OR YOUR VIOLATION OF ANY LAW OR THE RIGHTS OF A THIRD PARTY.</p>
+                <br>
 
                 <h3>Additional Terms</h3>
+                <br>
 
                 <h4>Governing Law</h4>
                 <p>These Terms will be governed by the laws of the State of Maine without giving effect to any conflict
                     of law principles that may require the application of the law of another jurisdiction.</p>
+                <br>
 
                 <h4>Disputes</h4>
                 <p>Any dispute relating in any way to your visit to or use of the Software, to the Services provided
@@ -120,19 +134,23 @@
                     and may be entered into as a judgment in any court of competent jurisdiction. You and we agree that
                     any dispute will be conducted only on an individual basis and not in a class, consolidated, or
                     representative action.</p>
+                <br>
 
                 <h4>Severability</h4>
                 <p>If any provision of these Terms is deemed invalid or unenforceable by a court of competent
                     jurisdiction, the remaining provisions shall continue in full force and effect.</p>
+                <br>
 
                 <h4>Entire Agreement</h4>
                 <p>These Terms constitute the entire agreement between you and us with respect to the Software and the
                     Services, and supersede all prior or contemporaneous understandings and agreements, whether written
                     or oral, relating to the Software and the Services.</p>
+                <br>
 
                 <h3>Contact Us</h3>
                 <p>If you have any questions regarding these Terms, please contact us at <a class="text-white"
-                        href="mailto:info@firstlinedefense.com">info@firstlinedefense.com</a>.</p>
+                                                                                            href="mailto:info@firstlinedefense.com">info@firstlinedefense.com</a>.
+                </p>
             </div>
         </div>
     </div>
