FEAT: Admin Section

--- a/src/web/admins/templates/admins/include/admin_header.html
+++ b/src/web/admins/templates/admins/include/admin_header.html
@@ -23,9 +23,8 @@
                             <a href="{% url 'admins:user-list' %}" class="dropdown-item">Users</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-pages" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admins:drama-list' %}">
                             <i class="bx bx-user mr-2"></i>Drama Series
                         </a>
                     </li>
@@ -37,12 +36,12 @@
                             <div class="arrow-down"></div>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="topnav-pages">
-                            <a href="#" class="dropdown-item">Tags</a>
-                            <a href="#" class="dropdown-item">Actors</a>
-                            <a href="#" class="dropdown-item">Languages</a>
-                            <a href="#" class="dropdown-item">Categories</a>
-                            <a href="#" class="dropdown-item">Directories</a>
-                            <a href="#" class="dropdown-item">Content Rating</a>
+                            <a href="{% url 'admins:tag-list' %}" class="dropdown-item">Tags</a>
+                            <a href="{% url 'admins:actor-list' %}" class="dropdown-item">Actors</a>
+                            <a href="{% url 'admins:language-list' %}"class="dropdown-item">Language</a>
+                            <a href="{% url 'admins:category-list' %}" class="dropdown-item">Categories</a>
+                            <a href="{% url 'admins:director-list' %}" class="dropdown-item">Directors</a>
+                            <a href="{% url 'admins:content-rating-list' %}" class="dropdown-item">Content Rating</a>
                         </div>
                     </li>
                 </ul>
