--- a/src/web/admins/templates/admins/tag_form.html
+++ b/src/web/admins/templates/admins/tag_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load humanize %}
@@ -6,18 +7,32 @@
 {% block subtitle %} {{ request.user }} {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Update Tag</h1>
+    <div class="container">
+        {% if object %}
+            <h1>Update Tag</h1>
+        {% else %}
+            <h1>Create Tag</h1>
+        {% endif %}
+        <div class="mt-2">
+            <a href="{% url 'admins:tag-list' %}" class="mt-2 btn btn-sm btn-secondary"><i class="fa fa-arrow-left" aria-hidden="true"></i>
+                Back to Tag List</a>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-sm-12">
+                <div class="card shadow-lg">
+                    <div class="card-body">
+                        <form method="post" novalidate>
+                            {% csrf_token %}
+                            {{ form.non_field_errors }}
+                            {{ form|crispy }}
 
-    <form method="post" novalidate>
-        {% csrf_token %}
-        {{ form.non_field_errors }}
-        {{ form|crispy }}
+                            <button type="submit" class="btn btn-primary">Confirm</button>
+                            <br>
+                        </form>
 
-        <button type="submit" class="btn btn-primary">Update Tag</button>
-        <br>
-    </form>
-
-    <a href="{% url 'admins:tag-list' %}" class="btn btn-secondary mt-2">Back to Tag List</a>
-</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
