--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
     <meta name="author" content="mark">
     <meta name="developer" content="exarth.com">
     <meta name="org-name" content="exarth"/>
-    <link rel="icon" href="{% if app.favicon %}{{ app.favicon.url }}{% else %}{% static 'core/images/logos/favico.ico' %}{% endif %}">
+    <link rel="icon" href="
+            {% if app.favicon %}{{ app.favicon.url }}{% else %}{% static 'core/images/logos/favico.ico' %}{% endif %}">
 
     <title>
 
@@ -42,6 +43,20 @@
     {# --------------------------------------------- #}
 
 </head>
+<style>
+body {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.87), rgba(255, 255, 255, 0.91)), url(/static/background.png);
+    background-size: auto 300px;
+    background-repeat: repeat;
+    background-position: left top, center top, right top; /* Repeat three times in a row */
+    line-height: 1.65;
+    font-family: "Roboto", sans-serif;
+    text-rendering: optimizelegibility;
+}
+
+
+</style>
+
 <body data-topbar="dark" data-layout="horizontal">
 
 {% block only-body %}
