--- a/src/web/admins/templates/admins/season_update.html
+++ b/src/web/admins/templates/admins/season_update.html
@@ -1,18 +1,21 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-
 {% block content %}
 <div class="container">
     <h1>Update Season for {{ season.series.title }}</h1>
 
-    <form method="post" novalidate>
-        {% csrf_token %}
-        {{ form.non_field_errors }}
-        {{ form|crispy }}
+    <div class="card border shadow-lg">
+        <div class="card-body">
+            <form method="post" novalidate>
+                {% csrf_token %}
+                {{ form.non_field_errors }}
+                {{ form|crispy }}
 
-        <button type="submit" class="btn btn-primary">Update Season</button>
-        <a href="{% url 'admins:drama-detail' slug=season.series.slug %}" class="btn btn-secondary ">Cancel</a>
-    </form>
+                <button type="submit" class="btn btn-primary">Update Season</button>
+                <a href="{% url 'admins:drama-detail' slug=season.series.slug %}" class="btn btn-secondary">Cancel</a>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
