Design:Update on admin portal list

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,8 @@ body {
 
             <div class="main-content">
 
-                <div class="page-content mt-4">
-                    <div class="container-fluid mt-5">
+                <div class="page-content ">
+                    <div class="container-fluid mt-0">
                         <div class="row">
                             {% include 'messages.html' %}
                         </div>
