--- a/src/web/admins/templates/admins/actor_list.html
+++ b/src/web/admins/templates/admins/actor_list.html
@@ -6,6 +6,7 @@
 {% block subtitle %} {{ request.user }} {% endblock %}
 
 {% block content %}
+
 <div class="row">
     <div class="col-12">
         <button type="button" class="btn btn-primary mb-3 sticky-right"
@@ -14,7 +15,7 @@
         </button>
         <div class="row">
             <div class="col-12">
-                <div class="card">
+                <div class="card shadow-lg rounded-lg">
                     {% if object_list %}
                     <div class="table-responsive">
                         <table class="table table-hover">
